[package]
name = "kth-lines"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Command line tool for filtering stdin lines that just work"
repository = "https://github.com/TiagoCavalcante/kth"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "kth"
path = "src/main.rs"
